--- a/src/domain/home/form/partial/birthdateFormField.module.scss
+++ b/src/domain/home/form/partial/birthdateFormField.module.scss
@@ -24,10 +24,15 @@
     grid-template-columns: 1fr 0.2fr 1fr 0.2fr 1fr;
     align-items: baseline;
 
+    input[type='number'] {
+      -moz-appearance: textfield;
+    }
+
     /* Hide number input spinners */
     input[type='number']::-webkit-inner-spin-button,
     input[type='number']::-webkit-outer-spin-button {
       -webkit-appearance: none;
+      appearance: none;
       margin: 0;
     }
   }
